change home text and fix text align

--- a/src/components/styles/_Timeline.sass
+++ b/src/components/styles/_Timeline.sass
@@ -48,3 +48,6 @@
       .date
         font-size: .875rem
         color: $RegentGray
+
+    .description
+      text-align: justify
