--- a/src/sections/styles/_Home.sass
+++ b/src/sections/styles/_Home.sass
@@ -4,6 +4,7 @@
       display: flex
       flex-direction: column
       gap: 1rem
+      text-align: justify
 
   .services
     gap: 2rem
